Ensures hidden cards collapse properly

--- a/app/assets/stylesheets/_board.scss
+++ b/app/assets/stylesheets/_board.scss
@@ -330,7 +330,7 @@
 }
 
 .card {
-  &.task-card {
+  &.task-card:not(.filter-hidden){
     display: inline-block;
     width: 96%;
   }
